; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/mboot/extr_main.c_do_write.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/mboot/extr_main.c_do_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@do_write.led_tog = internal global i64 0, align 8
@LED0 = common dso_local global i32 0, align 4
@MBOOT_SPIFLASH2_ADDR = common dso_local global i64 0, align 8
@MBOOT_SPIFLASH2_BYTE_SIZE = common dso_local global i64 0, align 8
@MBOOT_SPIFLASH2_SPIFLASH = common dso_local global i32 0, align 4
@MBOOT_SPIFLASH_ADDR = common dso_local global i64 0, align 8
@MBOOT_SPIFLASH_BYTE_SIZE = common dso_local global i64 0, align 8
@MBOOT_SPIFLASH_SPIFLASH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_write(i64 %0, i32* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* @LED0, align 4
  %8 = load i64, i64* @do_write.led_tog, align 8
  %9 = add nsw i64 %8, 1
  store i64 %9, i64* @do_write.led_tog, align 8
  %10 = and i64 %8, 4
  %11 = trunc i64 %10 to i32
  %12 = call i32 @led_state(i32 %7, i32 %11)
  %13 = load i64, i64* %4, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @flash_write(i64 %13, i32* %14, i64 %15)
  ret i32 %16
}

declare dso_local i32 @led_state(i32, i32) #1

declare dso_local i32 @flash_write(i64, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
